force-app/main/default/objects/ssot__PaymentCard__dlm/fields/ssot__BankIdentificationNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__BankIdentificationNumber__c</fullName>
    <label>Bank Identification Number</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>BankIdentificationNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>