force-app/main/default/objects/ssot__PaymentCard__dlm/fields/ssot__BillToCity__c.field-meta.xml
<CustomField>
    <fullName>ssot__BillToCity__c</fullName>
    <label>Bill to City</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>BillToCity</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>