force-app/main/default/objects/ssot__PaymentCard__dlm/fields/ssot__BillToCountryID__c.field-meta.xml
<CustomField>
    <fullName>ssot__BillToCountryID__c</fullName>
    <label>Bill to Country Id</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>BillToCountryID</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>