force-app/main/default/objects/ssot__PaymentCard__dlm/fields/ssot__BillToLastName__c.field-meta.xml
<CustomField>
    <fullName>ssot__BillToLastName__c</fullName>
    <label>Bill to Last Name</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>BillToLastName</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>