force-app/main/default/objects/ssot__PaymentCard__dlm/fields/ssot__BillToStateProvinceId__c.field-meta.xml
<CustomField>
    <fullName>ssot__BillToStateProvinceId__c</fullName>
    <label>Bill to State Province Id</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>BillToStateProvinceId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>