force-app/main/default/objects/ssot__PaymentCard__dlm/fields/ssot__BillToStreet__c.field-meta.xml
<CustomField>
    <fullName>ssot__BillToStreet__c</fullName>
    <label>Bill to Street</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>BillToStreet</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>