force-app/main/default/objects/ssot__PaymentCard__dlm/fields/ssot__CardHolderName__c.field-meta.xml
<CustomField>
    <fullName>ssot__CardHolderName__c</fullName>
    <label>Card Holder Name</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>CardHolderName</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>