force-app/main/default/objects/ssot__PaymentCard__dlm/fields/ssot__CardOwnershipType__c.field-meta.xml
<CustomField>
    <fullName>ssot__CardOwnershipType__c</fullName>
    <label>Card Ownership Type</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>CardOwnershipType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>