force-app/main/default/objects/ssot__PaymentCard__dlm/fields/ssot__CreditCardExpired__c.field-meta.xml
<CustomField>
    <fullName>ssot__CreditCardExpired__c</fullName>
    <label>Credit Card Expired</label>
    <length>5</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>CreditCardExpired</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>