force-app/main/default/objects/ssot__PaymentCard__dlm/fields/ssot__DerivedCardTypeCode__c.field-meta.xml
<CustomField>
    <fullName>ssot__DerivedCardTypeCode__c</fullName>
    <label>Derived Card Type Code</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>DerivedCardTypeCode</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>