force-app/main/default/objects/ssot__PaymentCard__dlm/fields/ssot__ExpirationYear__c.field-meta.xml
<CustomField>
    <fullName>ssot__ExpirationYear__c</fullName>
    <label>Expiration Year</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ExpirationYear</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>