force-app/main/default/objects/ssot__PaymentCard__dlm/fields/ssot__IssueNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__IssueNumber__c</fullName>
    <label>Issue Number</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IssueNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>