force-app/main/default/objects/ssot__PaymentCard__dlm/fields/ssot__MaskedNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__MaskedNumber__c</fullName>
    <label>Masked Number</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>MaskedNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>