force-app/main/default/objects/ssot__PaymentCard__dlm/fields/ssot__Name__c.field-meta.xml
<CustomField>
    <fullName>ssot__Name__c</fullName>
    <label>Payment Card Name</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>Name</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>