force-app/main/default/objects/ssot__PaymentCard__dlm/fields/ssot__NumberLastDigits__c.field-meta.xml
<CustomField>
    <fullName>ssot__NumberLastDigits__c</fullName>
    <label>Number Last Digits</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>NumberLastDigits</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>